PRX-254 Create the UserService entity
- Created ApplicationApi interface and ApplicationController for the application API operations.
- Created ApplicationRoleUserMapper class
- Created ApplicationService and ApplicationServiceImpl class
- Updated Copyright content